Build also with Java 11.