@@ -98,6 +98,17 @@
       <optional>true</optional>
     </dependency>
 
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>javax.activation-api</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <scope>provided</scope><!-- only required for compilation with Java 11 or higher, but only used by Java 7 or below -->
+    </dependency>
+
     <!-- test-scoped -->
     <dependency>
       <groupId>junit</groupId>
@@ -197,9 +208,33 @@
 
   <profiles>
     <profile>
-      <id>jdk9-ge</id>
+      <id>jdk11-ge</id>
       <activation>
-        <jdk>[9,)</jdk>
+        <jdk>[11,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <dependencies>
+              <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${version.javax.xml.bind.api}</version>
+              </dependency>
+            </dependencies>
+          </plugin>
+        </plugins>
+      </build>
+      <properties>
+        <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk9-ge-jdk10</id>
+      <activation>
+        <jdk>[9,11)</jdk>
       </activation>
       <properties>
         <surefire.argline>--add-modules java.activation,java.xml.bind --illegal-access=${surefire.illegal.access}</surefire.argline>
